# bsky-saves-gui

./: .env.example  .gitignore  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.archive.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  helper-ci.yml  pages.yml
app/: index.html
app/src/: App.svelte  env.d.ts  main.ts
app/src/archive/: ArchiveApp.svelte  main.ts
app/src/components/: BeaconButton.svelte  ExportMenu.svelte  HydratedImage.svelte
app/src/exporters/: blob-polyfill.ts  file-download.test.ts  file-download.ts  html-exporter.test.ts  html-exporter.ts  json-exporter.test.ts  json-exporter.ts  markdown-exporter.test.ts  markdown-exporter.ts  zip.ts
app/src/lib/: account-store.ts  atproto.test.ts  atproto.ts  beacon.test.ts  beacon.ts  build-info.ts  config.test.ts  config.ts  credentials-store.test.ts  credentials-store.ts  crypto.test.ts  crypto.ts  engine.test.ts  engine.ts  helper-detector.test.ts  helper-detector.ts  image-hydrator.test.ts  image-hydrator.ts  image-store.ts  inventory-loader.test.ts  inventory-loader.ts  inventory-store.test.ts  inventory-store.ts  last-session.ts  proxy-config.test.ts  (+10 more)
archive-template/: index.html
docs/: privacy.md
helper/: README.md  pyproject.toml
helper/src/bsky_saves_gui_helper/: __init__.py  cli.py  fetcher.py  server.py
helper/tests/: conftest.py  test_cli.py  test_fetcher.py  test_server.py
templates/cf-worker/: README.md  vitest.config.ts  worker.js  wrangler.toml.template
tools/: vite-plugin-cname.ts
(+33 files in other folders)
